--- a/src/body.html
+++ b/src/body.html
@@ -2,7 +2,12 @@
 
 <h3>Movie Night</h3>
 
-<div id="mn_player">Loading the player ...</div>
+<video id="mn_player" class="video-js vjs-default-skin"
+  controls preload="auto" width="640" height="264"
+  poster="http://video-js.zencoder.com/oceans-clip.png">
+ <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
+ <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+</video>
 
 <hr>
 
