--- a/src/start.html
+++ b/src/start.html
@@ -1,18 +1,4 @@
 <html>
-<style type="text/css">
-<!--
-.button {
-  border-radius: 3px;
-  -moz-border-radius: 3px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
-  background: -moz-linear-gradient(top, #fff, #ddd);
-  border: 1px solid #bbb;
-}
-
-.button:active {
-    background: -webkit-gradient(linear, left top, left bottom, from(#aaa), to(#333));
-    background: -moz-linear-gradient(bottom, #ddd, #aaa); }
-
--->
-</style>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<head>
+    <script src="//hangoutsapi.talkgadget.google.com/hangouts/_/api/hangout.js?v=1.3"></script>
+</head>
