Use PhD movie as sample

--- a/src/body.html
+++ b/src/body.html
@@ -3,10 +3,8 @@
 <h3>Movie Night</h3>
 
 <video id="mn_player" class="video-js vjs-default-skin"
-  controls preload="auto" width="640" height="264"
-  poster="http://video-js.zencoder.com/oceans-clip.png">
- <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
- <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+  controls preload="auto" width="640" height="360">
+  <source src="https://dl.dropbox.com/s/r3t6ky7g25mpepo/phd.mp4" type='video/mp4' />
 </video>
 
 <hr>
